// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getValueAndUnit should get value and % from decimal values 1`] = `
Array [
  33.3,
  "%",
]
`;

exports[`getValueAndUnit should get value and % from whole values 1`] = `
Array [
  80,
  "%",
]
`;

exports[`getValueAndUnit should get value and ch from decimal values 1`] = `
Array [
  1.2,
  "ch",
]
`;

exports[`getValueAndUnit should get value and ch from whole values 1`] = `
Array [
  1,
  "ch",
]
`;

exports[`getValueAndUnit should get value and cm from values 1`] = `
Array [
  1.5,
  "cm",
]
`;

exports[`getValueAndUnit should get value and cm from whole values 1`] = `
Array [
  1,
  "cm",
]
`;

exports[`getValueAndUnit should get value and em from decimal values 1`] = `
Array [
  1.2,
  "em",
]
`;

exports[`getValueAndUnit should get value and em from whole value 1`] = `
Array [
  1,
  "em",
]
`;

exports[`getValueAndUnit should get value and ex from decimal values 1`] = `
Array [
  1.2,
  "ex",
]
`;

exports[`getValueAndUnit should get value and ex from whole values 1`] = `
Array [
  1,
  "ex",
]
`;

exports[`getValueAndUnit should get value and in from values 1`] = `
Array [
  1.5,
  "in",
]
`;

exports[`getValueAndUnit should get value and in from whole values 1`] = `
Array [
  1,
  "in",
]
`;

exports[`getValueAndUnit should get value and mm from values 1`] = `
Array [
  1.5,
  "mm",
]
`;

exports[`getValueAndUnit should get value and mm from whole values 1`] = `
Array [
  1,
  "mm",
]
`;

exports[`getValueAndUnit should get value and pc from values 1`] = `
Array [
  1.5,
  "pc",
]
`;

exports[`getValueAndUnit should get value and pc from whole values 1`] = `
Array [
  1,
  "pc",
]
`;

exports[`getValueAndUnit should get value and pt from values 1`] = `
Array [
  1.5,
  "pt",
]
`;

exports[`getValueAndUnit should get value and pt from whole values 1`] = `
Array [
  1,
  "pt",
]
`;

exports[`getValueAndUnit should get value and px from values 1`] = `
Array [
  1.5,
  "px",
]
`;

exports[`getValueAndUnit should get value and px from whole values 1`] = `
Array [
  1,
  "px",
]
`;

exports[`getValueAndUnit should get value and q from values 1`] = `
Array [
  1.5,
  "q",
]
`;

exports[`getValueAndUnit should get value and q from whole values 1`] = `
Array [
  1,
  "q",
]
`;

exports[`getValueAndUnit should get value and rem from decimal values 1`] = `
Array [
  1.2,
  "rem",
]
`;

exports[`getValueAndUnit should get value and rem from whole values 1`] = `
Array [
  1,
  "rem",
]
`;

exports[`getValueAndUnit should get value and vh from decimal values 1`] = `
Array [
  33.33,
  "vh",
]
`;

exports[`getValueAndUnit should get value and vh from whole values 1`] = `
Array [
  100,
  "vh",
]
`;

exports[`getValueAndUnit should get value and vmax from decimal values 1`] = `
Array [
  33.33,
  "vmax",
]
`;

exports[`getValueAndUnit should get value and vmax from whole values 1`] = `
Array [
  100,
  "vmax",
]
`;

exports[`getValueAndUnit should get value and vmin from decimal values 1`] = `
Array [
  33.33,
  "vmin",
]
`;

exports[`getValueAndUnit should get value and vmin from whole values 1`] = `
Array [
  100,
  "vmin",
]
`;

exports[`getValueAndUnit should get value and vw from decimal values 1`] = `
Array [
  33.33,
  "vw",
]
`;

exports[`getValueAndUnit should get value and vw from whole values 1`] = `
Array [
  100,
  "vw",
]
`;

exports[`getValueAndUnit should return value and no unit when passed a number 1`] = `
Array [
  33,
  "",
]
`;

exports[`getValueAndUnit should return value and no unit when passed a number string 1`] = `
Array [
  33,
  "",
]
`;
